--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -4,90 +4,87 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/songRequest"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/songInfo"
+        android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:textSize="30sp"
-        android:maxLines="1"
-        android:text="Song Name"
-        android:textStyle="bold"
-        android:layout_alignParentTop="true"
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:singleLine="true"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit ="marquee_forever"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:scrollHorizontally="true"/>
+        android:background="@drawable/album_border">
 
-    <ImageView
-        android:id="@+id/albumArt"
-        android:layout_width="200sp"
-        android:layout_height="200sp"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/songRequest"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/album_border"/>
+        <ImageView
+            android:id="@+id/albumArt"
+            android:layout_width="300sp"
+            android:layout_height="300sp"
+            android:layout_gravity="center" />
 
-    <TextView
-        android:id="@+id/authorRequest"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@drawable/top_bottom_border">
+
+            <TextView
+                android:id="@+id/songRequest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:maxLines="1"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="Song Name"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/authorRequest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:maxLines="1"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="Author"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/acceptReject"
+        android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:text="Author"
-        android:maxLines="1"
-        android:layout_below="@+id/albumArt"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:singleLine="true"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit ="marquee_forever"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:scrollHorizontally="true"/>
+        android:layout_below="@+id/songInfo"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:layout_centerHorizontal="true">
 
-    <TextView
-        android:id="@+id/albumRequest"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Album"
-        android:maxLines="1"
-        android:layout_below="@+id/authorRequest"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:singleLine="true"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit ="marquee_forever"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:scrollHorizontally="true"/>
+        <Button
+            android:id="@+id/rejectButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Reject" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/rejectButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_delete"
-        android:layout_below="@+id/albumRequest"
-        android:layout_toLeftOf="@+id/albumArt"
-        android:layout_toStartOf="@+id/albumArt"/>
+        <Button
+            android:id="@+id/acceptButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Accept" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/acceptButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:layout_below="@+id/albumRequest"
-        android:layout_toRightOf="@+id/albumArt"
-        android:layout_toEndOf="@+id/albumArt" />
+    </LinearLayout>
 
 </RelativeLayout>
